--- a/react/react-music/src/components/App.styl
+++ b/react/react-music/src/components/App.styl
@@ -30,10 +30,12 @@
 
   .music-view
     position fixed
+    // overflow hidden
     top 88px
     left 0
     bottom 52px
     width 100%
+    // background #212121
 
 .nav-link, .link
   display block
